--- a/test/asd.html
+++ b/test/asd.html
@@ -1,35 +1,1 @@
-return React.createElement(
-    "div",
-    {
-      style: {
-        display: "flex",
-        flexDirection: "column",   // one link per row
-        justifyContent: "center",  // vertical centering
-        alignItems: "center",      // horizontal centering
-        rowGap: "4px",
-        height: "100%",
-        textAlign: "center",
-      },
-    },
-    links.map((url: string, index: number) => {
-      // filename is text after last %5C
-      const fileName = url.split("%5C").pop() || url;
-
-      return React.createElement(
-        "a",
-        {
-          key: index,
-          href: downloadURL + url,
-          target: "_blank",
-          rel: "noopener noreferrer",
-          style: {
-            color: "#3182CE",           // Chakra-ish blue
-            textDecoration: "underline",
-            cursor: "pointer",
-            whiteSpace: "nowrap",
-          },
-        },
-        fileName
-      );
-    })
-  );
+Allow user to modify the following fields: Person/Firm , Location, Info.
