--- a/test/asd.html
+++ b/test/asd.html
@@ -1,3 +1,4 @@
+// NewsletterPortalPage.tsx
 import { NewsletterPortalTable } from './NewsletterPortalTable';
 import { Box, IconButton, Input, InputGroup } from '@chakra-ui/react';
 import { Colors, useColorMode } from '@loim/loim-ui';
@@ -16,31 +17,26 @@ export const NewsletterPortalPage = () => {
   const handleSave = async () => {
     if (!gridApi) return;
 
-    const changedRows: any[] = [];
+    const allRows: any[] = [];
 
-    // collect only updated rows
+    // collect ALL rows (changed + unchanged)
     gridApi.forEachNode((node) => {
-      if (node.data && node.data._dirty) {
-        changedRows.push(node.data);
+      if (node.data) {
+        allRows.push(node.data);
       }
     });
-
-    if (changedRows.length === 0) {
-      setEditMode(false);
-      return;
-    }
 
     try {
       const response = await fetch(
         'http://nycuapp01.biz.lodh.com:8011/salesportal/api/crud/newsletter',
         {
-          method: 'POST',
+          method: 'POST', // same endpoint as GET, as requested
           credentials: 'include',
           headers: {
             'Content-Type': 'application/json; charset=utf-8',
             cache: 'no-cache',
           },
-          body: JSON.stringify(changedRows),
+          body: JSON.stringify(allRows),
         }
       );
 
@@ -49,16 +45,10 @@ export const NewsletterPortalPage = () => {
         return;
       }
 
-      // success → exit edit mode
+      // if save succeeds, exit edit mode
       setEditMode(false);
-
-      // clear dirty flags
-      gridApi.forEachNode((node) => {
-        if (node.data) node.data._dirty = false;
-      });
-
     } catch (err) {
-      console.error('Error while saving:', err);
+      console.error('Error while saving newsletter data:', err);
     }
   };
 
@@ -73,6 +63,8 @@ export const NewsletterPortalPage = () => {
           }
           borderBottom={`1px solid ${borderColor}`}
           padding="2.5rem 1.5rem"
+          display="flex"
+          alignItems="center"
         >
           <InputGroup
             width="40vw"
@@ -116,8 +108,7 @@ export const NewsletterPortalPage = () => {
 
 
 
-
-
+  // NewsletterPortalTable.tsx
 import { useEffect, useState } from 'react';
 import { AgGridReact } from 'ag-grid-react';
 import type { GridApi, GridReadyEvent } from 'ag-grid-community';
@@ -134,7 +125,7 @@ export const NewsletterPortalTable = ({
   editMode,
   onGridReadyExternal,
 }: NewsletterPortalTableProps) => {
-  const [data, setData] = useState([]);
+  const [data, setData] = useState<any[]>([]);
   const [columnDef] = useState(newsletterPortalColumnDefs);
   const [loading, setLoading] = useState(false);
 
@@ -154,9 +145,13 @@ export const NewsletterPortalTable = ({
         },
       }
     )
-      .then((res) => res.json())
-      .then(setData)
-      .finally(() => setLoading(false));
+      .then((response) => response.json())
+      .then((data) => {
+        setData(data);
+      })
+      .finally(() => {
+        setLoading(false);
+      });
   }, []);
 
   const handleGridReady = (params: GridReadyEvent) => {
@@ -164,13 +159,21 @@ export const NewsletterPortalTable = ({
   };
 
   return (
-    <div style={{ margin: '2px', padding: '2px', height: '74.5vh', width: '100vw' }}>
+    <div
+      style={{
+        margin: '2px',
+        padding: '2px',
+        height: '74.5vh',
+        width: '100vw',
+      }}
+    >
       <AgGridReact
+        key={editMode ? 'edit-mode' : 'view-mode'} // force refresh to update highlight/editability
         rowData={data}
         columnDefs={columnDef}
-        context={{ editMode }}
         theme={agGridTheme}
         loading={loading}
+        context={{ editMode }}
         onGridReady={handleGridReady}
         stopEditingWhenCellsLoseFocus={true}
       />
@@ -182,92 +185,52 @@ export const NewsletterPortalTable = ({
 
 
 
-
-
-
-
-
-  import type { ColDef } from 'ag-grid-community';
+    // newsletter-portal-column-defs.tsx
+import type { ColDef } from 'ag-grid-community';
 import React from 'react';
 
 /* -------------------------------------------------------
-   Editable Cell Renderer (Person/Firm, Location, Info)
-------------------------------------------------------- */
-const EditableCellRenderer = (params: any) => {
-  const { editMode } = params.context;
-
-  if (!editMode) {
-    return React.createElement(
-      "span",
-      { style: { padding: "4px" } },
-      params.value ?? ""
-    );
-  }
-
-  const onChange = (event: any) => {
-    params.node.setDataValue(params.colDef.field, event.target.value);
-    params.node.data._dirty = true; // mark row as modified
-  };
-
-  const isMultiline = params.colDef.field === "description";
-
-  return React.createElement(isMultiline ? "textarea" : "input", {
-    value: params.value ?? "",
-    onChange,
-    rows: isMultiline ? 3 : undefined,
-    style: {
-      width: "100%",
-      padding: "4px",
-      border: "1px solid #ccc",
-      borderRadius: "4px",
-      resize: isMultiline ? "vertical" : "none",
-      fontSize: "0.875rem"
-    }
-  });
-};
-
-/* -------------------------------------------------------
-   Download Cell Renderer
+   Download Cell Renderer (unchanged behavior)
 ------------------------------------------------------- */
 const DownloadCellRenderer = (params: any) => {
   const downloadURL =
-    "http://nycuapp01.biz.lodh.com:8011/salesportal/api/downloadFiles?fileLocations=";
+    'http://nycuapp01.biz.lodh.com:8011/salesportal/api/downloadFiles?fileLocations=';
 
-  let link = params.value?.replaceAll("\\", "%5C") ?? "";
+  let link = params.value?.replaceAll('\\', '%5C') ?? '';
 
-  let fileLocationArr = link
-    .split(";")
+  const fileLocationArr = link
+    .split(';')
     .map((s: string) => s.trim())
     .filter(Boolean);
 
   return React.createElement(
-    "div",
+    'div',
     {
       style: {
-        display: "flex",
-        flexDirection: "column",
-        justifyContent: "center",
-        alignItems: "center",
-        rowGap: "4px",
-        height: "100%",
-        textAlign: "center",
+        display: 'flex',
+        flexDirection: 'column', // one link per row
+        justifyContent: 'center', // vertical centering
+        alignItems: 'center', // horizontal centering
+        rowGap: '4px',
+        height: '100%',
+        textAlign: 'center',
       },
     },
     fileLocationArr.map((url: string, index: number) => {
-      const fileName = url.split("%5C").pop() || url;
+      const fileName = url.split('%5C').pop() || url;
 
       return React.createElement(
-        "a",
+        'a',
         {
           key: index,
           href: downloadURL + url,
-          target: "_blank",
-          rel: "noopener noreferrer",
+          target: '_blank',
+          rel: 'noopener noreferrer',
           style: {
-            color: "#3182CE",
-            textDecoration: "underline",
-            cursor: "pointer",
-            whiteSpace: "nowrap",
+            color: '#3182CE',
+            textDecoration: 'underline',
+            cursor: 'pointer',
+            whiteSpace: 'nowrap',
           },
         },
         fileName
@@ -277,7 +240,20 @@ const DownloadCellRenderer = (params: any) => {
 };
 
 /* -------------------------------------------------------
-   COLUMN DEFINITIONS (COMPLETE)
+   Common helper for editable cell styles
+------------------------------------------------------- */
+const editableCellStyle = (params: any) => {
+  // highlight only when grid is in editMode and column is editable
+  if (params.context?.editMode) {
+    return {
+      backgroundColor: '#FFFBEA', // soft yellow highlight
+    };
+  }
+  return undefined;
+};
+
+/* -------------------------------------------------------
+   COLUMN DEFINITIONS
 ------------------------------------------------------- */
 export const newsletterPortalColumnDefs: Array<ColDef> = [
   {
@@ -285,7 +261,7 @@ export const newsletterPortalColumnDefs: Array<ColDef> = [
     field: 'asOfDate',
     sortable: true,
     resizable: true,
-    filter: "agTextColumnFilter",
+    filter: 'agTextColumnFilter',
     suppressMenu: true,
     floatingFilter: true,
     width: 120,
@@ -296,7 +272,7 @@ export const newsletterPortalColumnDefs: Array<ColDef> = [
     field: 'section',
     sortable: true,
     resizable: true,
-    filter: "agTextColumnFilter",
+    filter: 'agTextColumnFilter',
     suppressMenu: true,
     floatingFilter: true,
     width: 200,
@@ -307,53 +283,60 @@ export const newsletterPortalColumnDefs: Array<ColDef> = [
     field: 'strategy',
     sortable: true,
     resizable: true,
-    filter: "agTextColumnFilter",
+    filter: 'agTextColumnFilter',
     suppressMenu: true,
     floatingFilter: true,
     width: 120,
   },
 
+  // 🔹 Editable: Person/Firm
   {
     headerName: 'Person/Firm',
     field: 'personFirm',
     sortable: true,
     resizable: true,
-    filter: "agTextColumnFilter",
+    filter: 'agTextColumnFilter',
     suppressMenu: true,
     floatingFilter: true,
     width: 150,
-    cellRenderer: EditableCellRenderer,
+    editable: (params) => !!params.context?.editMode, // AG Grid edit feature
+    cellStyle: editableCellStyle,
   },
 
+  // 🔹 Editable: Location
   {
     headerName: 'Location',
     field: 'countryRegion',
     sortable: true,
     resizable: true,
-    filter: "agTextColumnFilter",
+    filter: 'agTextColumnFilter',
     suppressMenu: true,
     floatingFilter: true,
     width: 150,
-    cellRenderer: EditableCellRenderer,
+    editable: (params) => !!params.context?.editMode,
+    cellStyle: editableCellStyle,
   },
 
+  // 🔹 Editable: Information
   {
     headerName: 'Information',
     field: 'description',
     sortable: true,
     resizable: true,
-    filter: "agTextColumnFilter",
+    filter: 'agTextColumnFilter',
     suppressMenu: true,
     floatingFilter: true,
     width: 500,
     autoHeight: true,
     wrapText: true,
-    cellRenderer: EditableCellRenderer,
+    editable: (params) => !!params.context?.editMode,
+    cellStyle: editableCellStyle,
   },
 
+  // 🔗 Download link column
   {
-    headerName: "Link",
-    field: "fileLocation",
+    headerName: 'Link',
+    field: 'fileLocation',
     autoHeight: true,
     wrapText: false,
     sortable: true,
@@ -363,6 +346,3 @@ export const newsletterPortalColumnDefs: Array<ColDef> = [
     cellRenderer: DownloadCellRenderer,
   },
 ];
-
-
-        
