--- a/test/asd.html
+++ b/test/asd.html
@@ -13,13 +13,12 @@ export const NewsletterPortalPage = () => {
 
   const [editMode, setEditMode] = useState(false);
   const [gridApi, setGridApi] = useState<GridApi | null>(null);
+  const [searchText, setSearchText] = useState('');   // 🔍 global search text
 
   const handleSave = async () => {
     if (!gridApi) return;
 
     const allRows: any[] = [];
-
-    // collect ALL rows (changed + unchanged)
     gridApi.forEachNode((node) => {
       if (node.data) {
         allRows.push(node.data);
@@ -30,7 +29,7 @@ export const NewsletterPortalPage = () => {
       const response = await fetch(
         'http://nycuapp01.biz.lodh.com:8011/salesportal/api/crud/newsletter',
         {
-          method: 'POST', // same endpoint as GET, as requested
+          method: 'POST',
           credentials: 'include',
           headers: {
             'Content-Type': 'application/json; charset=utf-8',
@@ -45,10 +44,19 @@ export const NewsletterPortalPage = () => {
         return;
       }
 
-      // if save succeeds, exit edit mode
       setEditMode(false);
     } catch (err) {
       console.error('Error while saving newsletter data:', err);
+    }
+  };
+
+  // 🔍 Global AG Grid search handler
+  const handleSearchChange = (e: React.ChangeEvent<HTMLInputElement>) => {
+    const value = e.target.value;
+    setSearchText(value);
+
+    if (gridApi) {
+      gridApi.setQuickFilter(value);   // ← AG Grid global filter
     }
   };
 
@@ -71,7 +79,11 @@ export const NewsletterPortalPage = () => {
             border="1px solid gray"
             startElement={<LuSearch />}
           >
-            <Input placeholder="Search ..." />
+            <Input
+              placeholder="Search ..."
+              value={searchText}
+              onChange={handleSearchChange}   // 🔗 wired to AG Grid quick filter
+            />
           </InputGroup>
 
           {!editMode && (
@@ -98,251 +110,8 @@ export const NewsletterPortalPage = () => {
 
       <NewsletterPortalTable
         editMode={editMode}
-        onGridReadyExternal={setGridApi}
+        onGridReadyExternal={setGridApi}   // keeps working as before
       />
     </>
   );
 };
-
-
-
-
-
-  // NewsletterPortalTable.tsx
-import { useEffect, useState } from 'react';
-import { AgGridReact } from 'ag-grid-react';
-import type { GridApi, GridReadyEvent } from 'ag-grid-community';
-
-import { newsletterPortalColumnDefs } from './newsletter-portal-column-defs';
-import { useAgGridTheme } from '@loim/loim-ui';
-
-type NewsletterPortalTableProps = {
-  editMode: boolean;
-  onGridReadyExternal?: (api: GridApi) => void;
-};
-
-export const NewsletterPortalTable = ({
-  editMode,
-  onGridReadyExternal,
-}: NewsletterPortalTableProps) => {
-  const [data, setData] = useState<any[]>([]);
-  const [columnDef] = useState(newsletterPortalColumnDefs);
-  const [loading, setLoading] = useState(false);
-
-  const { agGridTheme } = useAgGridTheme();
-
-  useEffect(() => {
-    setLoading(true);
-
-    fetch(
-      'http://nycuapp01.biz.lodh.com:8011/salesportal/api/crud/newsletter',
-      {
-        method: 'GET',
-        credentials: 'include',
-        headers: {
-          'Content-Type': 'application/json; charset=utf-8',
-          cache: 'no-cache',
-        },
-      }
-    )
-      .then((response) => response.json())
-      .then((data) => {
-        setData(data);
-      })
-      .finally(() => {
-        setLoading(false);
-      });
-  }, []);
-
-  const handleGridReady = (params: GridReadyEvent) => {
-    onGridReadyExternal?.(params.api);
-  };
-
-  return (
-    <div
-      style={{
-        margin: '2px',
-        padding: '2px',
-        height: '74.5vh',
-        width: '100vw',
-      }}
-    >
-      <AgGridReact
-        key={editMode ? 'edit-mode' : 'view-mode'} // force refresh to update highlight/editability
-        rowData={data}
-        columnDefs={columnDef}
-        theme={agGridTheme}
-        loading={loading}
-        context={{ editMode }}
-        onGridReady={handleGridReady}
-        stopEditingWhenCellsLoseFocus={true}
-      />
-    </div>
-  );
-};
-
-
-
-
-
-    // newsletter-portal-column-defs.tsx
-import type { ColDef } from 'ag-grid-community';
-import React from 'react';
-
-/* -------------------------------------------------------
-   Download Cell Renderer (unchanged behavior)
-------------------------------------------------------- */
-const DownloadCellRenderer = (params: any) => {
-  const downloadURL =
-    'http://nycuapp01.biz.lodh.com:8011/salesportal/api/downloadFiles?fileLocations=';
-
-  let link = params.value?.replaceAll('\\', '%5C') ?? '';
-
-  const fileLocationArr = link
-    .split(';')
-    .map((s: string) => s.trim())
-    .filter(Boolean);
-
-  return React.createElement(
-    'div',
-    {
-      style: {
-        display: 'flex',
-        flexDirection: 'column', // one link per row
-        justifyContent: 'center', // vertical centering
-        alignItems: 'center', // horizontal centering
-        rowGap: '4px',
-        height: '100%',
-        textAlign: 'center',
-      },
-    },
-    fileLocationArr.map((url: string, index: number) => {
-      const fileName = url.split('%5C').pop() || url;
-
-      return React.createElement(
-        'a',
-        {
-          key: index,
-          href: downloadURL + url,
-          target: '_blank',
-          rel: 'noopener noreferrer',
-          style: {
-            color: '#3182CE',
-            textDecoration: 'underline',
-            cursor: 'pointer',
-            whiteSpace: 'nowrap',
-          },
-        },
-        fileName
-      );
-    })
-  );
-};
-
-/* -------------------------------------------------------
-   Common helper for editable cell styles
-------------------------------------------------------- */
-const editableCellStyle = (params: any) => {
-  // highlight only when grid is in editMode and column is editable
-  if (params.context?.editMode) {
-    return {
-      backgroundColor: '#FFFBEA', // soft yellow highlight
-    };
-  }
-  return undefined;
-};
-
-/* -------------------------------------------------------
-   COLUMN DEFINITIONS
-------------------------------------------------------- */
-export const newsletterPortalColumnDefs: Array<ColDef> = [
-  {
-    headerName: 'Date',
-    field: 'asOfDate',
-    sortable: true,
-    resizable: true,
-    filter: 'agTextColumnFilter',
-    suppressMenu: true,
-    floatingFilter: true,
-    width: 120,
-  },
-
-  {
-    headerName: 'Section',
-    field: 'section',
-    sortable: true,
-    resizable: true,
-    filter: 'agTextColumnFilter',
-    suppressMenu: true,
-    floatingFilter: true,
-    width: 200,
-  },
-
-  {
-    headerName: 'Strategy',
-    field: 'strategy',
-    sortable: true,
-    resizable: true,
-    filter: 'agTextColumnFilter',
-    suppressMenu: true,
-    floatingFilter: true,
-    width: 120,
-  },
-
-  // 🔹 Editable: Person/Firm
-  {
-    headerName: 'Person/Firm',
-    field: 'personFirm',
-    sortable: true,
-    resizable: true,
-    filter: 'agTextColumnFilter',
-    suppressMenu: true,
-    floatingFilter: true,
-    width: 150,
-    editable: (params) => !!params.context?.editMode, // AG Grid edit feature
-    cellStyle: editableCellStyle,
-  },
-
-  // 🔹 Editable: Location
-  {
-    headerName: 'Location',
-    field: 'countryRegion',
-    sortable: true,
-    resizable: true,
-    filter: 'agTextColumnFilter',
-    suppressMenu: true,
-    floatingFilter: true,
-    width: 150,
-    editable: (params) => !!params.context?.editMode,
-    cellStyle: editableCellStyle,
-  },
-
-  // 🔹 Editable: Information
-  {
-    headerName: 'Information',
-    field: 'description',
-    sortable: true,
-    resizable: true,
-    filter: 'agTextColumnFilter',
-    suppressMenu: true,
-    floatingFilter: true,
-    width: 500,
-    autoHeight: true,
-    wrapText: true,
-    editable: (params) => !!params.context?.editMode,
-    cellStyle: editableCellStyle,
-  },
-
-  // 🔗 Download link column
-  {
-    headerName: 'Link',
-    field: 'fileLocation',
-    autoHeight: true,
-    wrapText: false,
-    sortable: true,
-    resizable: true,
-    suppressMenu: true,
-    width: 250,
-    cellRenderer: DownloadCellRenderer,
-  },
-];
