--- a/test/asd.html
+++ b/test/asd.html
@@ -1,16 +1,271 @@
-\const formatDate = (params: any) => {
+// NewsletterPortalPage.tsx
+import React, { useState } from "react";
+import { NewsletterPortalTable } from "./NewsletterPortalTable";
+import { Box, Input, InputGroup } from "@chakra-ui/react";
+import { Colors, useColorMode } from "@loim/loim-ui";
+import { LuSearch } from "react-icons/lu";
+
+export const NewsletterPortalPage: React.FC = () => {
+  const { colorMode } = useColorMode();
+  const borderColor =
+    colorMode === "dark" ? Colors.gray[800].value : Colors.gray[100].value;
+
+  // quick filter text for AG Grid
+  const [searchText, setSearchText] = useState("");
+
+  return (
+    <>
+      <Box>
+        <Box
+          bg={colorMode === "dark" ? Colors.gray[900].value : Colors.gray[100].value}
+          borderBottom={`1px solid ${borderColor}`}
+          padding="2.5rem 1.5rem"
+        >
+          <InputGroup width="40vw" border="1px solid gray" style={{ display: "inline-flex" }}>
+            <Input
+              placeholder="Search ..."
+              value={searchText}
+              onChange={(e) => setSearchText(e.target.value)}
+              aria-label="Global search"
+              startElement={<LuSearch />}
+            />
+          </InputGroup>
+        </Box>
+      </Box>
+
+      <NewsletterPortalTable quickFilterText={searchText} />
+    </>
+  );
+};
+
+
+
+
+// NewsletterPortalTable.tsx
+import React, { useEffect, useState, useCallback } from "react";
+import { AgGridReact } from "ag-grid-react";
+import type { GridReadyEvent, CellDoubleClickedEvent, CellValueChangedEvent } from "ag-grid-community";
+import { newsletterPortalColumnDefs } from "./newsletter-portal-column-defs";
+import { useAgGridTheme } from "@loim/loim-ui";
+
+type NewsletterPortalTableProps = {
+  quickFilterText?: string;
+};
+
+export const NewsletterPortalTable: React.FC<NewsletterPortalTableProps> = ({ quickFilterText = "" }) => {
+  const [rowData, setRowData] = useState<any[]>([]);
+  const { agGridTheme } = useAgGridTheme();
+  const [loading, setLoading] = useState(false);
+
+  useEffect(() => {
+    setLoading(true);
+    fetch("http://nycuapp01.biz.lodh.com:8011/salesportal/api/crud/newsletter", {
+      method: "GET",
+      credentials: "include",
+      headers: {
+        "Content-Type": "application/json; charset=utf-8",
+        cache: "no-cache",
+      },
+    })
+      .then((res) => res.json())
+      .then((data) => {
+        setRowData(data ?? []);
+      })
+      .catch((err) => {
+        console.error("Error fetching newsletter data", err);
+      })
+      .finally(() => setLoading(false));
+  }, []);
+
+  const handleGridReady = useCallback((params: GridReadyEvent) => {
+    // nothing special needed here; kept for future use
+  }, []);
+
+  // Start editing on double click
+  const onCellDoubleClicked = (params: CellDoubleClickedEvent) => {
+    // Start editing the clicked cell
+    try {
+      params.api.startEditingCell({
+        rowIndex: params.rowIndex,
+        colKey: params.colDef.field as string,
+      });
+    } catch (err) {
+      // Some AG versions/typings might differ — fallback
+      params.api.startEditingCell({
+        rowIndex: params.node.rowIndex,
+        colKey: params.colDef.field as string,
+      });
+    }
+  };
+
+  // After a cell is changed (editing finished), POST the entire row to API
+  const onCellValueChanged = async (params: CellValueChangedEvent) => {
+    // params.data is the full row
+    const updatedRow = params.data;
+
+    // Optional: you might want to remove internal fields before sending
+    // For now we'll send entire object as requested
+    try {
+      const res = await fetch("http://nycuapp01.biz.lodh.com:8011/salesportal/api/crud/newsletter", {
+        method: "POST",
+        credentials: "include",
+        headers: {
+          "Content-Type": "application/json; charset=utf-8",
+          cache: "no-cache",
+        },
+        body: JSON.stringify([updatedRow]), // send as array of rows (or single object if API expects)
+      });
+
+      if (!res.ok) {
+        console.error("Failed to save row", await res.text());
+        // Optionally show a toast or revert change
+      } else {
+        // success: optionally update local state or show toast
+        // We'll update the local rowData (params.node already has new data)
+      }
+    } catch (err) {
+      console.error("Error posting updated row", err);
+    }
+  };
+
+  return (
+    <div style={{ margin: "2px", padding: "2px", height: "74.5vh", width: "100vw" }}>
+      <AgGridReact
+        rowData={rowData}
+        columnDefs={newsletterPortalColumnDefs}
+        onGridReady={handleGridReady}
+        onCellDoubleClicked={onCellDoubleClicked}
+        onCellValueChanged={onCellValueChanged}
+        frameworkComponents={{}}
+        stopEditingWhenCellsLoseFocus={true}
+        defaultColDef={{
+          sortable: true,
+          resizable: true,
+          filter: true,
+        }}
+        quickFilterText={quickFilterText}
+        animateRows={true}
+        loadingOverlayComponentParams={{ loading }}
+        theme={agGridTheme}
+      />
+    </div>
+  );
+};
+
+
+
+
+    // newsletter-portal-column-defs.tsx
+import type { ColDef } from "ag-grid-community";
+import React from "react";
+
+/** Date formatter: dd-Mmm-yyyy (10-Dec-2025) */
+const formatDate = (params: any) => {
   if (!params.value) return "";
-
-  const date = new Date(params.value);
-  if (isNaN(date.getTime())) return params.value;
-
-  const day = date.getDate().toString().padStart(2, "0");
-
-  const monthNames = ["Jan", "Feb", "Mar", "Apr", "May", "Jun",
-                      "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
-  const month = monthNames[date.getMonth()];
-
-  const year = date.getFullYear(); // full 4-digit year
-
+  const d = new Date(params.value);
+  if (isNaN(d.getTime())) return params.value;
+  const day = d.getDate().toString().padStart(2, "0");
+  const monthNames = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
+  const month = monthNames[d.getMonth()];
+  const year = d.getFullYear();
   return `${day}-${month}-${year}`;
 };
+
+/* Download cell renderer (stacked links, file name shown) */
+const DownloadCellRenderer = (params: any) => {
+  const downloadURL = "http://nycuapp01.biz.lodh.com:8011/salesportal/api/downloadFiles?fileLocations=";
+  let link = params.value?.replaceAll("\\", "%5C") ?? "";
+  const fileLocationArr = link.split(";").map((s: string) => s.trim()).filter(Boolean);
+
+  return React.createElement(
+    "div",
+    {
+      style: {
+        display: "flex",
+        flexDirection: "column",
+        justifyContent: "center",
+        alignItems: "center",
+        rowGap: "4px",
+        height: "100%",
+        textAlign: "center",
+      },
+    },
+    fileLocationArr.map((url: string, idx: number) => {
+      const fileName = url.split("%5C").pop() || url;
+      return React.createElement(
+        "a",
+        {
+          key: idx,
+          href: downloadURL + url,
+          target: "_blank",
+          rel: "noopener noreferrer",
+          style: {
+            color: "#3182CE",
+            textDecoration: "underline",
+            cursor: "pointer",
+            whiteSpace: "nowrap",
+          },
+        },
+        fileName
+      );
+    })
+  );
+};
+
+/* COLUMN DEFINITIONS */
+export const newsletterPortalColumnDefs: Array<ColDef> = [
+  {
+    headerName: "Date",
+    field: "asOfDate",
+    valueFormatter: formatDate,
+    width: 120,
+    filter: "agDateColumnFilter",
+  },
+
+  {
+    headerName: "Section",
+    field: "section",
+    width: 200,
+    filter: "agTextColumnFilter",
+  },
+
+  {
+    headerName: "Strategy",
+    field: "strategy",
+    width: 120,
+    filter: "agTextColumnFilter",
+  },
+
+  // Editable columns — editing triggered by double-click
+  {
+    headerName: "Person/Firm",
+    field: "personFirm",
+    width: 150,
+    editable: true, // cell becomes editable via AG Grid when editing started
+  },
+
+  {
+    headerName: "Location",
+    field: "countryRegion",
+    width: 150,
+    editable: true,
+  },
+
+  {
+    headerName: "Information",
+    field: "description",
+    width: 500,
+    autoHeight: true,
+    wrapText: true,
+    editable: true,
+    // use textarea-like editor? AG Grid default will handle editing; you can plug large text editor later
+  },
+
+  {
+    headerName: "Link",
+    field: "fileLocation",
+    width: 250,
+    cellRenderer: DownloadCellRenderer,
+    autoHeight: true,
+  },
+];
